# rescue_gui

./: CMakeLists.txt  Escritorio.lnk  README.md  main.cpp  mainwindow.cpp  mainwindow.h  please.py
